got rid of readmes
